Huge performance increase when listing artifacts, e.g. Jenkins job or run screens (#21)